--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Kurz Watcher</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Conversion</string>
+    <string name="title_dashboard">Rates</string>
     <string name="title_notifications">Notifications</string>
     <string name="button_refresh">Refresh</string>
     <string name="currency_icon_desc">Currency icon</string>
